# refact-search

./: .gitignore  LICENSE  README.md  bootstrap.py  converter.py  docker-compose.yml  main.py  pyproject.toml  test.py
preprocessing/: typesense_indexing.py
preprocessing/fixtures/: __init__.py
src/config/: _container.py  _environment.py
tests/: search_test.py
