[project]
name = "refact-search"
version = "0.1.0"
description = ""
authors = [
    {name = "CIOI",email = "rhkr9693@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typesense (>=1.0.3,<2.0.0)",
    "dependency-injector (>=4.46.0,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "findup (>=0.3.0,<0.4.0)"
]


[tool.poe.tasks]
test = "python -m pytest"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
poethepoet = "^0.33.1"

